# llama.cpp

common/: chat-parser.cpp  chat-parser.h  chat.cpp  chat.h
tests/: test-chat.cpp
tools/: CMakeLists.txt
tools/embedded/: CMakeLists.txt  README-dev.md  server-async-stream.hpp  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-core.cpp  server-core.h  server-embedded.cpp  server-embedded.h  server-model-manager.hpp  server-task.cpp  server-task.h  uv-memory-server.hpp
tools/server/: server-task.cpp
